--- a/Python Basics/3.Data_Types.ipynb
+++ b/Python Basics/3.Data_Types.ipynb
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 4,
    "id": "008a454e",
    "metadata": {},
    "outputs": [],
@@ -1581,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 5,
    "id": "9265922a",
    "metadata": {},
    "outputs": [
@@ -1600,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 6,
    "id": "b66bffde",
    "metadata": {},
    "outputs": [
@@ -1619,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 7,
    "id": "37e46d39",
    "metadata": {},
    "outputs": [
@@ -1638,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 8,
    "id": "46e4db47",
    "metadata": {},
    "outputs": [
@@ -1648,7 +1648,7 @@
        "[10, 9, 7, 7, 5.12, 5, 5, 5, 4, 3, 2]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1660,65 +1660,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 9,
+   "id": "cafc69bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 7, 7, 5.12, 5, 5, 5, 4, 3, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "del sam[1]\n",
+    "print(sam)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "46e80f19",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "62.12"
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61.12\n",
+      "11\n",
+      "9\n",
+      "2\n",
+      "[2, 3, 4, 5, 5, 5, 5.12, 7, 7, 9, 9]\n",
+      "5.556363636363637\n",
+      "5\n",
+      "5\n",
+      "2.24965451893073\n"
+     ]
     }
    ],
    "source": [
-    "sum(sam)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "id": "97d008bf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "max(sam)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "id": "53b9dbe5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "min(sam)"
+    "No = [5,9,4,7,5,9,5,7,2,3,5.12]\n",
+    "\n",
+    "from statistics import mean, median, mode, stdev\n",
+    "\n",
+    "print(sum(No))\n",
+    "print(len(No))\n",
+    "print(max(No))\n",
+    "print(min(No))\n",
+    "print(sorted(No))\n",
+    "print(mean(No))\n",
+    "print(median(No))\n",
+    "print(mode(No))\n",
+    "print(stdev(No))\n"
    ]
   },
   {
@@ -1806,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "id": "5de1995e",
    "metadata": {},
    "outputs": [
@@ -1826,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
    "id": "55247c1b",
    "metadata": {},
    "outputs": [
@@ -1836,7 +1830,7 @@
        "(3, 7)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1850,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "id": "20a1141c",
    "metadata": {},
    "outputs": [
@@ -1860,7 +1854,7 @@
        "2"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1871,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "id": "32611008",
    "metadata": {},
    "outputs": [
@@ -1881,7 +1875,7 @@
        "1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1892,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "id": "624fc29d",
    "metadata": {},
    "outputs": [
@@ -1903,7 +1897,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mcoordinates\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m(\u001b[38;5;241m1\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[166], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mcoordinates\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m(\u001b[38;5;241m1\u001b[39m)\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
      ]
     }
@@ -1914,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "id": "22bae590",
    "metadata": {},
    "outputs": [
@@ -1934,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "id": "be1a9f84",
    "metadata": {},
    "outputs": [
@@ -1945,7 +1939,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Immutability\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Uncommenting the line below will result in an error since tuples are immutable.\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[43mcoordinates\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m\n",
+      "Cell \u001b[1;32mIn[168], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Immutability\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Uncommenting the line below will result in an error since tuples are immutable.\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[43mcoordinates\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m\n",
       "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
@@ -1958,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "id": "cafa353a",
    "metadata": {},
    "outputs": [
@@ -1968,7 +1962,7 @@
        "(3, 7, 4, 5, 4)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1981,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "id": "446ec265",
    "metadata": {},
    "outputs": [
@@ -2002,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 1,
    "id": "03466c19",
    "metadata": {},
    "outputs": [
@@ -2019,7 +2013,7 @@
        "tuple"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2034,70 +2028,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 26,
    "id": "d1138350",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "21"
-      ]
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n",
+      "6\n",
+      "6\n",
+      "1\n",
+      "[1, 2, 3, 4, 5, 6]\n",
+      "3.5\n",
+      "3.5\n",
+      "1\n",
+      "1.8708286933869707\n"
+     ]
     }
    ],
    "source": [
-    "sum(T3)"
+    "print(sum(T3))\n",
+    "print(len(T3))\n",
+    "print(max(T3))\n",
+    "print(min(T3))\n",
+    "print(sorted(T3))\n",
+    "print(mean(T3))\n",
+    "print(median(T3))\n",
+    "print(mode(T3))\n",
+    "print(stdev(T3))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "id": "3d3012f5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 137,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "max(T3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "id": "96688c61",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 138,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "min(T3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "id": "dcf60e9a",
    "metadata": {},
    "outputs": [
@@ -2107,7 +2072,7 @@
        "2"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2311,16 +2276,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0e6358e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "man"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e594b265",
    "metadata": {},
@@ -2340,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "id": "cf28df5a",
    "metadata": {},
    "outputs": [
@@ -2350,7 +2305,7 @@
        "{'name': ['John', 'Bhavan'], 'age': [20, 23], 'grade': ['A', 'B']}"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2363,7 +2318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "id": "36c3bdc0",
    "metadata": {},
    "outputs": [
@@ -2383,7 +2338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "id": "59d95cf4",
    "metadata": {},
    "outputs": [
@@ -2404,7 +2359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "id": "08f4bde1",
    "metadata": {},
    "outputs": [
@@ -2424,7 +2379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "id": "e42726dd",
    "metadata": {},
    "outputs": [
@@ -2432,7 +2387,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_items([('name', ['John', 'Bhavan']), ('age', [20, 23]), ('grade', ['B', 'B'])])\n"
+      "dict_items([('name', ['John', 'Bhavan']), ('age', [20, 23]), ('grade', ['A', 'B'])])\n"
      ]
     }
    ],
@@ -2444,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "id": "3f1a9c82",
    "metadata": {},
    "outputs": [
@@ -2457,7 +2412,7 @@
       "age\n",
       "[20, 23]\n",
       "grade\n",
-      "['B', 'B']\n"
+      "['A', 'B']\n"
      ]
     }
    ],
@@ -2469,7 +2424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "id": "cb20fa36",
    "metadata": {},
    "outputs": [
@@ -2489,7 +2444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "id": "a05b85b2",
    "metadata": {},
    "outputs": [
@@ -2497,7 +2452,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_values([['John', 'Bhavan'], [20, 23], ['B', 'B']])\n"
+      "dict_values([['John', 'Bhavan'], [20, 23], ['A', 'B']])\n"
      ]
     }
    ],
@@ -2509,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "id": "007c55b8",
    "metadata": {},
    "outputs": [
@@ -2529,7 +2484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "id": "3794bd4b",
    "metadata": {},
    "outputs": [
@@ -2549,17 +2504,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "id": "0233af1f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['name', 'age', 'grade', 'city', 'country'])"
+       "dict_keys(['name', 'age', 'grade', 'city'])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2570,7 +2525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "id": "dbe135b9",
    "metadata": {},
    "outputs": [
@@ -2592,7 +2547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "id": "16c70842",
    "metadata": {},
    "outputs": [
@@ -2612,7 +2567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "id": "5a129f31",
    "metadata": {},
    "outputs": [
@@ -2634,7 +2589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "id": "88583ae4",
    "metadata": {},
    "outputs": [
@@ -2650,6 +2605,27 @@
     "# Determining the number of key-value pairs in a dictionary.\n",
     "length = len(student_info)\n",
     "print(length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "7f2d3919",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "351\n",
+      "13.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic = {'A':1,'B':2,'C':3,'D':4,'E':5,'F':6,'G':7,'H':8,'I':9,'J':10,'K':11,'L':12,'M':13,'N':14,'O':15,'P':16,'Q':17,'R':18,'S':19,'T':20,'U':21,'V':22,'W':23,'X':24,'Y':25,'Z':26}\n",
+    "print(sum(dic.values()))\n",
+    "print(mean(dic.values()))"
    ]
   },
   {
@@ -2962,7 +2938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "2bfc65b6",
    "metadata": {},
    "outputs": [
@@ -2972,7 +2948,7 @@
        "{1, 2, 3, 4, 5, 7}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2985,7 +2961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "9a813e20",
    "metadata": {},
    "outputs": [
@@ -2993,7 +2969,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 3, 4, 5, 6, 7, 8}\n"
+      "{1, 2, 3, 4, 5, 7, 8}\n"
      ]
     }
    ],
@@ -3005,7 +2981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "c17f74ed",
    "metadata": {},
    "outputs": [
@@ -3013,7 +2989,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 4, 5, 6, 7}\n"
+      "{1, 2, 3, 4, 5, 7}\n"
      ]
     }
    ],
@@ -3025,7 +3001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "c0dcdd6a",
    "metadata": {},
    "outputs": [
@@ -3041,6 +3017,34 @@
     "# Determining the number of elements in a set\n",
     "length = len(unique_numbers)\n",
     "print(length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "19c4cb38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n",
+      "7\n",
+      "1\n",
+      "6\n",
+      "[1, 2, 3, 4, 5, 7]\n",
+      "[7, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(unique_numbers))\n",
+    "print(max(unique_numbers))\n",
+    "print(min(unique_numbers))\n",
+    "print(len(unique_numbers))\n",
+    "print(sorted(unique_numbers))\n",
+    "print(sorted(unique_numbers, reverse=True))"
    ]
   },
   {
