--- a/Python Basics/4.Conditional_Statements.ipynb
+++ b/Python Basics/4.Conditional_Statements.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "c7337c57",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
+   "id": "0390d5b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is not greater than 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "if x < 5:\n",
+    "    print(\"x is greater than 5\")\n",
+    "else:\n",
+    "    print(\"x is not greater than 5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "facff153",
    "metadata": {},
    "outputs": [
@@ -53,14 +75,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello\n"
+      "Bye\n"
      ]
     }
    ],
    "source": [
-    "a = True #try assigning False to a\n",
+    "a = False #try assigning False to a\n",
     "if a:\n",
-    "    print('Hello') #try removing the indentation"
+    "    print('Hello') #try removing the indentation\n",
+    "else:\n",
+    "    print('Bye')"
    ]
   },
   {
@@ -94,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "41be216d",
    "metadata": {},
    "outputs": [
@@ -102,40 +126,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x is even\n"
+      "x is odd\n"
      ]
     }
    ],
    "source": [
-    "x = 4\n",
+    "x = 5\n",
     "if x % 2 == 0:\n",
     "    print(\"x is even\")\n",
     "else:\n",
     "    print(\"x is odd\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "5dab669b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n"
-     ]
-    }
-   ],
-   "source": [
-    "#let's understand how it works\n",
-    "a = True\n",
-    "if a:\n",
-    "    print('Hello')\n",
-    "else:\n",
-    "    print('Bye')\n",
-    "#print('000000')"
    ]
   },
   {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "87917060",
    "metadata": {},
    "outputs": [
@@ -164,8 +164,8 @@
    ],
    "source": [
     "#'a==4' is the conditional expression\n",
-    "a = 5\n",
-    "if a==5: \n",
+    "a = 4\n",
+    "if a!=5: \n",
     "    print('Hello')\n",
     "else:\n",
     "    print('Bye')\n"
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "60e046a6",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "even\n"
+      "odd\n"
      ]
     }
    ],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "48002bbb",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020 is a leap year.\n"
+      "2032 is a leap year.\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "c53d063a",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10  is not divisible by 3 itself, hence I won't check if it is divisible by 5\n",
+      "40  is divisible by 3 itself, hence I won't check if it is divisible by 5\n",
       "We understood if-else\n"
      ]
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "id": "b0334aa1",
    "metadata": {},
    "outputs": [
@@ -268,13 +268,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All is well with the world\n"
+      "How did that happen?\n"
      ]
     }
    ],
    "source": [
     "a=5\n",
-    "b=6\n",
+    "b=5\n",
     "if a == b:\n",
     "    print(\"How did that happen?\")\n",
     "elif a > b:\n",
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "a8606e24",
    "metadata": {},
    "outputs": [
@@ -293,15 +293,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hay i am here\n"
+      "dont ask\n"
      ]
     }
    ],
    "source": [
     "d = [1,2,3,\"true\"]\n",
-    "if d[-2]>2:\n",
+    "if d[-3]>2:\n",
     "    print(\"hay i am here\")\n",
-    "elif d[-2]>=2:\n",
+    "elif d[-3]>=2:\n",
     "    print(\"dont ask\")\n",
     "else:\n",
     "    print(\"i am outside\")"
@@ -309,32 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "876b2b75",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Even\n"
-     ]
-    }
-   ],
-   "source": [
-    "#let us find if a given number is even or not\n",
-    "\n",
-    "a = int(input('Tell a number : '))\n",
-    "\n",
-    "if a%2 == 0:\n",
-    "    print('Even')\n",
-    "else:\n",
-    "    print('Odd')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "id": "ad6916fa",
    "metadata": {},
    "outputs": [
@@ -342,7 +317,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ohh! yes, it is divisible by 5\n"
+      "Ohh! yes, it is divisible by 3\n"
      ]
     }
    ],
@@ -351,7 +326,9 @@
     "\n",
     "a = int(input('Tell a number : '))\n",
     "\n",
-    "if a%3==0:\n",
+    "if a % 3 == 0 and a % 5 == 0:\n",
+    "    print(a, ' is divisible by both 3 and 5')\n",
+    "elif a%3==0:\n",
     "    print('Ohh! yes, it is divisible by 3')\n",
     "elif a%5==0:\n",
     "        print('Ohh! yes, it is divisible by 5')\n",
@@ -361,12 +338,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "54c2291d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is equal to 5\n"
+     ]
+    }
+   ],
    "source": [
-    "x = 10\n",
+    "x = 5\n",
     "if x > 5:\n",
     "    print(\"x is greater than 5\")\n",
     "elif x < 5:\n",
@@ -377,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "id": "ade21839",
    "metadata": {},
    "outputs": [
@@ -385,9 +370,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "275\n",
-      "68.75\n",
-      "B+\n"
+      "320\n",
+      "80.0\n",
+      "A+\n"
      ]
     }
    ],
